test/oscar/compiler/errors/noInitValue.oscar
def main() => unit = {
  int x;
}